fix dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -1,33 +1,35 @@
-@import 'tailwindcss';
+@import "tailwindcss";
+@custom-variant dark (&:where(.dark, .dark *));
+
 :root {
-	font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-	line-height: 1.5;
-	font-weight: 400;
+    font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    font-weight: 400;
 
-	color-scheme: light dark;
-	color: #fff;
-	background-color: #fff;
+    color-scheme: light dark;
+    color: #fff;
+    background-color: #fff;
 
-	font-synthesis: none;
-	text-rendering: optimizeLegibility;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 a {
-	text-decoration: none;
-	color: #e50914;
-	transition: color 0.3s;
+    text-decoration: none;
+    color: #e50914;
+    transition: color 0.3s;
 }
 a:hover {
-	color: #ff1f1f;
+    color: #ff1f1f;
 }
 
 body {
-	margin: 0;
-	min-width: 320px;
-	background-color: #000;
-	color: #fff;
+    margin: 0;
+    min-width: 320px;
+    background-color: #000;
+    color: #fff;
 }
 
 h1,
@@ -36,45 +38,45 @@ h3,
 h4,
 h5,
 h6 {
-	font-weight: 600;
-	margin-bottom: 0.5em;
+    font-weight: 600;
+    margin-bottom: 0.5em;
 }
 
 button {
-	border-radius: 4px;
-	border: none;
-	padding: 0.6em 1.2em;
-	font-size: 1em;
-	font-weight: 500;
-	font-family: inherit;
-	background-color: #e50914;
-	color: #fff;
-	cursor: pointer;
-	transition: background-color 0.3s;
+    border-radius: 4px;
+    border: none;
+    padding: 0.6em 1.2em;
+    font-size: 1em;
+    font-weight: 500;
+    font-family: inherit;
+    background-color: #e50914;
+    color: #fff;
+    cursor: pointer;
+    transition: background-color 0.3s;
 }
 
 button:hover {
-	border-color: #ff1f1f;
+    border-color: #ff1f1f;
 }
 
-section: {
-	margin-top: 2rem;
-	margin-bottom: 2rem;
+section {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 
 ::-webkit-scrollbar {
-	width: 8px;
+    width: 8px;
 }
 
 ::-webkit-scrollbar-track {
-	background: #111;
+    background: #111;
 }
 
 ::-webkit-scrollbar-thumb {
-	background-color: #e50914;
-	border-radius: 4px;
+    background-color: #e50914;
+    border-radius: 4px;
 }
-/* 
+/*
 @media (prefers-color-scheme: light) {
 	:root {
 		color: #213547;
